<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextText_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:autofillHints=""
        android:backgroundTint="#BD7777"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/nombre"
        tools:ignore="Deprecated,LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="20dp" />

    <EditText
        android:id="@+id/editTextText2_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/apellido"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="74dp" />

    <EditText
        android:id="@+id/editTextText3_dividiendo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/dividiendo"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="167dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextText4_divisor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/divisor"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="230dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextText5_parteEntera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/perte_entera"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="321dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextText6_residuo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="Residuo"
        tools:ignore="HardcodedText,LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="389dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextText7_invertido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/num_invertido"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="475dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:text="@string/siguiente"
        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="562dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="178dp"
        android:layout_height="59dp"
        android:text="@string/cerrar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="628dp" />
</androidx.constraintlayout.widget.ConstraintLayout>