<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegundaaActivity">

    <EditText
        android:id="@+id/editTextText_nombree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Nombre"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="27dp" />

    <EditText
        android:id="@+id/editTextText2_apellidoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/apellido2"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="92dp" />

    <EditText
        android:id="@+id/editTextText3_dividiendoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Dividiendo"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="183dp" />

    <EditText
        android:id="@+id/editTextText4_Divisorr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Divisor"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="252dp" />

    <EditText
        android:id="@+id/editTextText5_numeroo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Número"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="365dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="461dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="550dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>